--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_2_SpaceTypes</td>
+<td>com.marina.tests.Mod_8_Reservation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>SelectionUnitPeriod_and_verify_two_option_TC_214</td>
-<td>regression smoke </td>
+<td>categoryChangeNightlyToMonthly_TC_1203</td>
+<td>regression,sanity,smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -22,15 +22,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeTest</td>
+<td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterTest</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
