--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]<br/></td></tr>
-<tr><td>smoke</td><td>Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression,sanity,smoke</td><td>Mod_8_Reservation.categoryChangeNightlyToMonthly_TC_1203()[pri:3, instance:com.marina.tests.Mod_8_Reservation@1a3869f4]<br/></td></tr>
 </table>
