--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f2bbc1">  <td>23/11/20 05:39:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">SelectionUnitPeriod_and_verify_two_option_TC_214</td> 
-  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/11/20 05:39:36</td>   <td>4099</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="f2bbc1">  <td>23/11/20 05:39:34</td>   <td>1790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="f2bbc1">  <td>23/11/20 05:38:57</td>   <td>-35415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
-<tr bgcolor="96d072">  <td>23/11/20 05:38:56</td>   <td>-35960</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
+<tr bgcolor="96b684">  <td>23/11/29 19:28:57</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_8_Reservation@1a3869f4]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1858609436</td>   <td></td> </tr>
+<tr bgcolor="bbd26a">  <td>23/11/29 19:28:45</td>   <td>-12691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_8_Reservation.categoryChangeNightlyToMonthly_TC_1203()[pri:3, instance:com.marina.tests.Mod_8_Reservation@1a3869f4]">categoryChangeNightlyToMonthly_TC_1203</td> 
+  <td>main@1858609436</td>   <td></td> </tr>
+<tr bgcolor="96b684">  <td>23/11/29 19:28:25</td>   <td>-32149</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_8_Reservation@1a3869f4]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1858609436</td>   <td></td> </tr>
+<tr bgcolor="bbd26a">  <td>23/11/29 19:28:25</td>   <td>-31888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_8_Reservation.setUp()[pri:0, instance:com.marina.tests.Mod_8_Reservation@1a3869f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1858609436</td>   <td></td> </tr>
 </table>
